[tool.poetry]
name = "home"
version = "0.1.0"
description = ""
authors = ["Garrett Duby <[gduby36@gmail.com]>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
streamlit-extras = "^0.4.7"
openai = "^1.45.1"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
streamlit-agraph = "^0.0.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
